tf/modules/polybot/sg_alb.tf
# Security group specifically for the ALB

resource "aws_security_group" "tf-polybot-alb-sg" {
  name        = "tf-${var.owner}-polybot-alb-sg"
  description = "SG for polybot alb access"
  vpc_id = var.vpc_id

  # inbound rules for the /results endpoint
    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 8443
    to_port     = 8443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["91.108.4.0/22"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["149.154.160.0/20"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
